--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,9 +2,6 @@
     z-index: 99999;
     padding-top: 60px;
 }
-
 .sb-backgroundImg {
-
-    background: url(../../assets/images/background.png)
-
+    background: url(/assets/images/background.png)
 }
