--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,8 +11,4 @@
 
 <app-streamer [public_profile_info]="public_profile_info" [stream_post_id]="stream_post_id" *ngIf="awake_apps && exe_user_name == '0456fra'"></app-streamer>
 
-<div class="spotbie-scroll-top spotbie-arrow-transparent" 
-        (click)="scrollTop()"
-        #scrollArrow>
-        <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-</div>
+<app-scroll-to-top></app-scroll-to-top>
