--- a/src/app/bugs/bugs.component.css
+++ b/src/app/bugs/bugs.component.css
@@ -24,7 +24,7 @@ h1, p {
 
 .sb-backgroundImg {
 
-    background: url(/assets/images/background.png)
+    background: url(../../assets/images/background.png)
 
 }
 
