--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,5 +3,5 @@
     padding-top: 60px;
 }
 .sb-backgroundImg {
-    background: url(/assets/images/background.png)
+    background: url(../../assets/images/background.png)
 }
