--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -613,6 +613,7 @@ swiper{
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
+    font-family: sitka-italic;
 }
 .map-prompt-mobile .sb-button:hover,
 .map-prompt-mobile .sb-button:focus{
