--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -46,7 +46,7 @@
   <div class="map-prompt-mobile" *ngIf="showMobilePrompt2">
 
     <div class="title" (click)="showMobilePrompt2 = false">
-      Touch Map to Begin!
+      Touch Map to Begin.
     </div>
 
   </div>
