--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -127,6 +127,7 @@
 }
 .spotbie-menu-page-padding-top-not-logged{
     padding-top: 76px;
+    margin-top: env(safe-area-inset-top);
 }
 .spotbie-apps-overlay{
     position: fixed;
