--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -2,6 +2,8 @@
 
 <div class="termsWrapper">
 
+<h1 [routerLink]="['/home']" style="text-align: right;">Home</h1>
+
 <h1>Privacy Policy</h1>
 <p>Last updated: November 07, 2020</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
