--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,8 @@
 
     <app-menu-logged-out class="spotbie-app-menu" (spawnCategoriesOut)="spawnCategories($event)"></app-menu-logged-out>
 
+    <div class="spotbie-menu-page-padding-top-not-logged"></div>
+
     <app-scroll-to-top></app-scroll-to-top>
 
 </div>
