--- a/src/app/spotbie/read-about/read-about.component.html
+++ b/src/app/spotbie/read-about/read-about.component.html
@@ -10,11 +10,11 @@
                     
                     Connecting <span id="usersSpan" (click)="signUpNow()">users</span>,
 
-                    <span (click)="scrollT()">retail shops</span>,
+                    <span (click)="scrollT('shopping')">retail shops</span>,
 
-                    <span (click)="scrollT()">places to eat</span>,
+                    <span (click)="scrollT('food')">places to eat</span>,
 
-                    and <span (click)="scrollT()">events</span>.
+                    and <span (click)="scrollT('events')">events</span>.
 
                 </p>
 
@@ -34,10 +34,10 @@
             </table>                             
 
             <p class="QuestionsPar spotbieAddPointerCursor">                   
-                <span class='spotbie-search-click' (click)="scrollT()">Search Places to Eat</span>        
+                <span class='spotbie-search-click' (click)="scrollT('food')">Search Places to Eat</span>        
             </p> 
 
-            <picture (click)="scrollT()">
+            <picture (click)="scrollT('food')">
                 <source srcset='assets/images/home_imgs/webp/providing-you-places-to-eat-around-you.webp' media="(min-width: 881px)" type='image/webp'>
                 <source srcset='assets/images/home_imgs/webp/providing-you-places-to-eat-around-you1x.webp' media="(min-width: 481px)" type='image/webp'>
                 <source srcset='assets/images/home_imgs/webp/providing-you-places-to-eat-around-you2x.webp'  media="(min-width: 415px)" type='image/webp'>
@@ -51,15 +51,19 @@
 
             </picture>                                      
 
+            <app-single-ad></app-single-ad>
+
             <p class="QuestionsPar">                     
-                <span class='spotbie-search-click' (click)="scrollT()">Search Events</span>
+                <span class='spotbie-search-click' (click)="scrollT('events')">Search Events</span>
             </p>  
 
             <img class="QuestionsImage spotbieAddPointerCursor" style="margin-top: 0%;"
                     src="assets/images/home_imgs/jpg/find_events_around.jpg" 
-                    alt="Picture of girl in her twenties enjoying food in a restaurant."
-                    (click)="scrollT()" />
+                    alt="Image of event marquee above entrance of theater or hotel."
+                    (click)="scrollT('events')" />
             
+            <app-single-ad></app-single-ad>
+
             <!-- <h2 class="HA spotbieAddPointerCursor" (click)="openSlideShow(0);">
                 <span class="dfg">Monetizable Profiles</span>
             </h2>                                                
@@ -113,10 +117,10 @@
             </p>-->                                 
 
             <p class="QuestionsPar spotbieAddPointerCursor">
-                <span class='spotbie-search-click' (click)="scrollT()">Search Retail Shops</span>      
+                <span class='spotbie-search-click' (click)="scrollT('shopping')">Search Retail Shops</span>      
             </p>                         
 
-            <picture (click)="scrollT()">
+            <picture (click)="scrollT('shopping')">
 
                 <source srcset='assets/images/home_imgs/webp/providing-you-places-to-shop-around-you.webp' media="(min-width: 415px)" type='image/webp'>
                 <source srcset='assets/images/home_imgs/webp/providing-you-places-to-shop-around-you1x.webp' media="(min-width: 481px)" type='image/webp'>
@@ -132,6 +136,7 @@
 
             </picture>  
 
+            <app-single-ad></app-single-ad>
 
             <p class="QuestionsPar spotbieAddPointerCursor">        
                 <span class='spotbie-search-click' (click)="signUpNow()">Connecting Users By Location</span>        
@@ -153,6 +158,7 @@
 
             </picture>        
 
+            <app-single-ad></app-single-ad>
 
             <!-- <h2 class="HA spotbieAddPointerCursor" (click)="openSlideShow(5);">        
                 <span class="dfg">Connecting Users to Content Creators</span>        
