--- a/src/app/spotbie/read-about/read-about.component.html
+++ b/src/app/spotbie/read-about/read-about.component.html
@@ -51,7 +51,7 @@
 
             </picture>                                      
 
-            <app-single-ad></app-single-ad>
+            <!--<app-single-ad></app-single-ad>-->
 
             <p class="QuestionsPar">                     
                 <span class='spotbie-search-click' (click)="scrollT('events')">Search Events</span>
@@ -62,7 +62,8 @@
                     alt="Image of event marquee above entrance of theater or hotel."
                     (click)="scrollT('events')" />
             
-            <app-single-ad></app-single-ad>
+            <!--<app-single-ad></app-single-ad>-->
+
 
             <!-- <h2 class="HA spotbieAddPointerCursor" (click)="openSlideShow(0);">
                 <span class="dfg">Monetizable Profiles</span>
@@ -136,7 +137,7 @@
 
             </picture>  
 
-            <app-single-ad></app-single-ad>
+            <!--<app-single-ad></app-single-ad>-->
 
             <p class="QuestionsPar spotbieAddPointerCursor">        
                 <span class='spotbie-search-click' (click)="signUpNow()">Connecting Users By Location</span>        
@@ -158,7 +159,7 @@
 
             </picture>        
 
-            <app-single-ad></app-single-ad>
+            <!--<app-single-ad></app-single-ad>-->
 
             <!-- <h2 class="HA spotbieAddPointerCursor" (click)="openSlideShow(5);">        
                 <span class="dfg">Connecting Users to Content Creators</span>        
